27/11 - finished the css

--- a/b-plus-client/src/app/book-info/book-info.component.css
+++ b/b-plus-client/src/app/book-info/book-info.component.css
@@ -5,3 +5,14 @@
 .related{
   padding-top: 5%;
 }
+
+.button-submit-coment{
+  background-color: #1C155B;
+  color: white;
+  border-style: none;
+}
+
+.comments{
+  margin-top: 2%;
+  margin-bottom: 2%;
+}
