--- a/b-plus-client/src/app/help-page/help-page.component.html
+++ b/b-plus-client/src/app/help-page/help-page.component.html
@@ -7,76 +7,101 @@
       <div class="col-md-12">
         <div id="accordion" class="accordion">
           <div class="card mb-0">
-            <div class="card-header collapsed" data-toggle="collapse" href="#collapseOne">
+            <div class="card-header collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
               <a class="card-title">
-                Item 1
+                Como pesquisar um livro?
               </a>
             </div>
-            <div id="collapseOne" class="card-body collapse" data-parent="#accordion" >
-              <p class="card-text">Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt
-                aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat
-                craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
-              </p>
+            <div id="collapseOne" class="collapse" data-parent="#accordion" >
+              <div class="card-body">O usuário deverá clica na barra de pesquisa superior da tela e digitar o nome ou algo relacionado com o livro desejado.
+              </div>
             </div>
             <div class="card-header collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">
               <a class="card-title">
-                Item 2
+                Como criar uma lista?
               </a>
             </div>
-            <div id="collapseTwo" class="card-body collapse" data-parent="#accordion" >
-              <p>Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt
-                aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat
-                craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
-              </p>
+            <div id="collapseTwo" class="collapse" data-parent="#accordion" >
+              <div class="card-body">No canto direito inferior da tela “Minha biblioteca”
+                o usuário clica em “Nova lista” e é redirecionado a tela de criação de lista.
+              </div>
             </div>
+
             <div class="card-header collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseThree">
               <a class="card-title">
-                Item 3
+                Como editar uma lista?
               </a>
             </div>
             <div id="collapseThree" class="collapse" data-parent="#accordion" >
-              <div class="card-body">Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt
-                aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. samus labore sustainable VHS.
+              <div class="card-body">Para editar a lista o usuário deverá clicar no lápis no canto direito da lista.
               </div>
             </div>
             <div class="card-header collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseFour">
               <a class="card-title">
-                Item 3
+                Como remover uma lista?
               </a>
             </div>
             <div id="collapseFour" class="collapse" data-parent="#accordion" >
-              <div class="card-body">Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt
-                aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. samus labore sustainable VHS.
+              <div class="card-body">Para realizar a exclusão de uma lista o usuário deverá clicar no
+                ultimo ícone lixeira no canto direito da lista e confirmar a exclusão depois.
               </div>
             </div>
             <div class="card-header collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseFive">
               <a class="card-title">
-                Item 3
+                Como torna uma lista privada?
               </a>
             </div>
             <div id="collapseFive" class="collapse" data-parent="#accordion" >
-              <div class="card-body">Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt
-                aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. samus labore sustainable VHS.
+              <div class="card-body">O usuário pode definir essa opção durante a criação de uma nova lista ou após.
+                Ele seleciona a opção de editar lista e no canto superior esquerdo da lista ele clica em privada.
               </div>
             </div>
             <div class="card-header collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseSix">
               <a class="card-title">
-                Item 3
+                Como tornar uma lista pública?
               </a>
             </div>
             <div id="collapseSix" class="collapse" data-parent="#accordion">
-              <div class="card-body">Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt
-                aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. samus labore sustainable VHS.
+              <div class="card-body">O usuário pode definir essa opção durante a criação de uma nova lista ou após.
+                Ele seleciona a opção de editar lista e no canto superior esquerdo da lista ele clica em pública.
               </div>
             </div>
             <div class="card-header collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseSeven">
               <a class="card-title">
-                Item 3
+                Como compartilhar uma lista?
               </a>
             </div>
             <div id="collapseSeven" class="collapse" data-parent="#accordion" >
-              <div class="card-body">Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt
-                aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. samus labore sustainable VHS.
+              <div class="card-body">No canto inferior direito da lista você seleciona a rede social desejada para compartilhamento
+                e o sistema gera o link e redireciona o usuário a outras plataformas.
+              </div>
+            </div>
+
+            <div class="card-header collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseEight">
+              <a class="card-title">
+                Posso compartilhar listas apenas com alunos e corpo docente?
+              </a>
+            </div>
+            <div id="collapseEight" class="collapse" data-parent="#accordion" >
+              <div class="card-body">Apenas com alunos e professores com uma matricula ativa na faculdade.
+              </div>
+            </div>
+            <div class="card-header collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseNine">
+            <a class="card-title">
+              Como sair da sua conta (logout)?
+            </a>
+          </div>
+            <div id="collapseNine" class="collapse" data-parent="#accordion" >
+              <div class="card-body">No canto superior direito da tela do sistema o usuário deverá apertar no perfil e selecionar a opção de sair.
+              </div>
+            </div>
+            <div class="card-header collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTen">
+              <a class="card-title">
+                Somente professores conseguem recomendar listas?
+              </a>
+            </div>
+            <div id="collapseTen" class="collapse" data-parent="#accordion" >
+              <div class="card-body">Apenas professores.
               </div>
             </div>
           </div>
