Finished functions on shared lists page.

--- a/b-plus-client/src/app/header/header.component.html
+++ b/b-plus-client/src/app/header/header.component.html
@@ -39,7 +39,7 @@
       				<li>
                 <a [routerLink]="['/recommended-page']">
                   <i class="fas fa-bookmark"></i>
-                  Bibliografia Recomendada
+                  Bibliografias Compartilhadas
                 </a>
               </li>
       				<li>
